--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,23 +4,23 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black">
+        android:background="@color/white">
 
     <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/wealogo"
+            app:srcCompat="@drawable/forecast"
             android:id="@+id/imageView"/>
     <TextView
-            android:text="Wee App"
+            android:text="WeeApp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView3"
-            android:textColor="@color/white"
+            android:textColor="@color/gray"
             android:textStyle="bold"
             android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_margin="80dp"/>
+            android:layout_marginBottom="150dp"/>
 </android.support.constraint.ConstraintLayout>
