--- a/app/src/main/res/layout/activity_current.xml
+++ b/app/src/main/res/layout/activity_current.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,4 +28,4 @@
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@id/latitude_text"
             app:layout_constraintStart_toStartOf="@+id/latitude_text"/>
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
