--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cons"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
@@ -29,60 +30,46 @@
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="50dp"/>
 
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/ic_menu_mylocation"
-            android:id="@+id/locationBtn" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
 
     <TextView
-            android:text="City and country"
+            android:text="Select City &amp; country"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerView" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
+            android:layout_height="wrap_content" android:id="@+id/textView4"
             android:textSize="20sp"
             android:textColor="@color/gray"
-            android:textStyle="bold" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/view"/>
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:textStyle="bold" android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/view"
+            android:layout_marginStart="50dp" app:layout_constraintStart_toStartOf="parent"/>
+    <Spinner
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="50dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/cityBtn"
-            app:layout_constraintTop_toBottomOf="@+id/view"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_height="wrap_content" android:id="@+id/spinnerV"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="30dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
+            android:layout_marginTop="10dp"/>
 
-    <RelativeLayout
+
+    <Button
+            android:background="@drawable/oval"
+            android:text="Add New City"
+            android:textColor="@drawable/btn_txt_selector"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/cityBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="50dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:orientation="horizontal"
-            android:layout_marginBottom="20dp"
-            android:id="@+id/cityBtn">
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/spinnerV"/>
 
-        <TextView
-                android:text="Add New City"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView6"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:layout_marginStart="50dp"
-                android:layout_alignParentStart="true"/>
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@android:drawable/ic_input_add"
-                android:id="@+id/imageView3"
-                android:layout_marginEnd="50dp"
-                android:layout_alignParentEnd="true"/>
-    </RelativeLayout>
+    <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/locationBtn"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            app:lottie_fileName="location.json"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
