--- a/app/src/main/res/layout/create_weather.xml
+++ b/app/src/main/res/layout/create_weather.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -27,7 +27,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"/>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/city_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
             android:theme="@style/TextInputLayoutAppearance"
             app:layout_constraintBottom_toTopOf="@+id/country_layout">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/cityTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -44,9 +44,9 @@
                 android:layout_marginEnd="16dp"
                 android:hint="Input city here"/>
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/country_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
             app:errorEnabled="true"
             android:theme="@style/TextInputLayoutAppearance">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/countryTxt"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
@@ -65,7 +65,7 @@
                 android:gravity="top"
                 android:hint="Input country here"/>
 
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
             android:text="Add"
@@ -76,8 +76,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/black"
-            android:textColor="@color/white"/>
+            android:textColor="@drawable/btn_txt_selector"
+            android:background="@drawable/oval"/>
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
