--- a/app/src/main/res/layout/weather_details.xml
+++ b/app/src/main/res/layout/weather_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:id="@+id/pullToRefresh"
@@ -10,7 +10,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/weather_detail">
@@ -26,7 +26,7 @@
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="50dp"/>
         <TextView
-                android:text="Mujeeb"
+                tools:text="City"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/personName"
@@ -202,6 +202,6 @@
                 android:layout_marginEnd="50dp"
                 android:layout_marginTop="16dp"/>
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</android.support.v4.widget.SwipeRefreshLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
